--- a/src/views/layouts/main.ejs
+++ b/src/views/layouts/main.ejs
@@ -1,35 +1,38 @@
-<!-- filepath: c:\Users\Kayla Ryhs\Desktop\PersonalProjects\helloRun\hellorun\src\views\layouts\main.ejs -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title><%= title %></title>
+  <title><%= title || 'HelloRun - Virtual Running Events' %></title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Poppins:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/css/style.css">
+  <% if (locals.additionalCSS) { %>
+    <% additionalCSS.forEach(css => { %>
+      <link rel="stylesheet" href="<%= css %>">
+    <% }); %>
+  <% } %>
+  <script src="https://unpkg.com/lucide@latest"></script>
 </head>
 <body>
-  <nav>
-    <div class="nav-container">
-      <a href="/" class="logo">helloRun</a>
-      <ul class="nav-links">
-        <li><a href="/">Home</a></li>
-        <li><a href="/events">Events</a></li>
-        <% if (user) { %>
-          <li><a href="/logout">Logout</a></li>
-        <% } else { %>
-          <li><a href="/login">Login</a></li>
-          <li><a href="/signup">Sign Up</a></li>
-        <% } %>
-      </ul>
-    </div>
-  </nav>
-
+  <%- include('./nav') %>
+  
   <main>
     <%- body %>
   </main>
-
-  <footer>
-    <p>&copy; 2026 helloRun. All rights reserved.</p>
-  </footer>
+  
+  <%- include('./footer') %>
+  
+  <script src="/js/main.js"></script>
+  <% if (locals.additionalJS) { %>
+    <% additionalJS.forEach(js => { %>
+      <script src="<%= js %>"></script>
+    <% }); %>
+  <% } %>
+  
+  <script>
+    lucide.createIcons();
+  </script>
 </body>
 </html>
