--- a/src/views/layouts/nav.ejs
+++ b/src/views/layouts/nav.ejs
@@ -1,17 +1,25 @@
 <!-- filepath: c:\Users\Kayla Ryhs\Desktop\PersonalProjects\helloRun\hellorun\src\views\layouts\nav.ejs -->
-<nav>
+<nav class="nav">
   <div class="nav-container">
-    <a href="/" class="logo">helloRun</a>
-    <ul class="nav-links">
-      <li><a href="/">Home</a></li>
-      <li><a href="/events">Events</a></li>
-      <% if (user) { %>
-        <li><span>Hello, <%= user.firstName %></span></li>
-        <li><a href="/logout">Logout</a></li>
+    <a href="/" class="logo">
+      <img src="/images/helloRun-icon.webp" alt="HelloRun Logo" class="logo-icon">
+      <span>HelloRun</span>
+    </a>
+    
+    <button class="menu-toggle" aria-label="Toggle menu">
+      <i data-lucide="menu"></i>
+    </button>
+    
+    <div class="nav-links">
+      <a href="/">Home</a>
+      <a href="/events">Events</a>
+      <a href="/about">About</a>
+      <% if (locals.user) { %>
+        <a href="/dashboard" class="btn">Dashboard</a>
+        <a href="/logout">Logout</a>
       <% } else { %>
-        <li><a href="/login">Login</a></li>
-        <li><a href="/signup">Sign Up</a></li>
+        <a href="/login" class="btn">Get Started</a>
       <% } %>
-    </ul>
+    </div>
   </div>
 </nav>
